--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,9 @@
         <dependency>
             <groupId>ua.in.dris4ecoder</groupId>
             <artifactId>SimpleCalculator</artifactId>
-            <version>1.1</version>
+            <version>2.0-rc2</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/SimpleCalculator-1.1-jar-with-dependencies.jar</systemPath>
+            <systemPath>${project.basedir}/src/main/resources/SimpleCalculator-2.0-rc2-jar-with-dependencies.jar</systemPath>
         </dependency>
 
     </dependencies>
